fixed project setup.

--- a/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
+++ b/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
@@ -3,17 +3,54 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <PublishChromeDriver>true</PublishChromeDriver>
-    <PackOnBuild>true</PackOnBuild>
-    <PackageId>VH.AcceptanceTests.Tests</PackageId>
-    <Authors>Video Hearings</Authors>
-    <Description>Consolidated package with Specflow support, common configuration loading, Webdriver Sauce labs and Test setup common hooks and common steps.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="appsettings.json" />
+    <None Remove="adminweb.firefox.desktop.runsettings.xml" />
+    <None Remove="resources\servicewebsite\serviceweb.chrome.desktop.runsettings.xml" />
+    <None Remove="appsettings.AdminWeb.json" />
+    <None Remove="resources\adminwebsite\adminwebsite.firefox.desktop %28copy%29.runsettings.xml" />
+    <None Remove="resources\adminwebsite\adminwebsite.firefox.desktop %28another copy%29.runsettings.xml" />
+    <None Remove="resources\adminwebsite\adminwebsite.firefox.desktop %283rd copy%29.runsettings.xml" />
+    <None Remove="resources\servicewebsite\adminwebsite.edge.desktop.runsettings.xml" />
+    <None Remove="resources\servicewebsite\adminwebsite.firefox.desktop.runsettings.xml" />
+    <None Remove="resources\servicewebsite\adminwebsite.safari.desktop.runsettings.xml" />
+    <None Remove="resources\videowebsite\servicewebsite.useraccounts.json" />
+    <None Remove="SpecflowTests\AdminWebsite\Resources\adminwebsite.useraccounts.json" />
+    <None Remove="SpecflowTests\AdminWebsite\Resources\adminwebsite.firefox.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\AdminWebsite\Resources\adminwebsite.safari.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\AdminWebsite\Resources\adminwebsite.edge.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\AdminWebsite\Resources\adminwebsite.appsettings.json" />
+    <None Remove="SpecflowTests\AdminWebsite\Resources\adminwebsite.chrome.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\ServiceWebsite\Resources\servicewebsite.safari.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\ServiceWebsite\Resources\servicewebsite.firefox.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\ServiceWebsite\Resources\servicewebsite.chrome.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\ServiceWebsite\Resources\servicewebsite.edge.desktop.runsettings.xml" />
+    <None Remove="SpecflowTests\ServiceWebsite\Resources\servicewebsite.useraccounts.json" />
+    <None Remove="SpecflowTests\ServiceWebsite\Resources\servicewebsite.appsettings.json" />
+    <None Remove="SpecflowTests\VideoWebsite\Resources\videowebsite.appsettings.json" />
+    <None Remove="SpecflowTests\VideoWebsite\Resources\videowebsite.useraccounts.json" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Features\AdminWebsite\SigningIn.feature">
       <Generator></Generator>
+    </None>
+    <None Update="useraccounts.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings %28copy%29.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="adminwebsite %28copy%29.useraccounts.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="resources\videowebsite\servicewebsite.appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="resources\videowebsite\videowebsite.appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -26,31 +63,21 @@
     <PackageReference Include="Coypu" Version="3.1.1" />
     <PackageReference Include="Coypu.NUnit" Version="3.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-        <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IntegrationTests\" />
-    <Folder Include="SpecflowTests\AdminWebsite\" />
-    <Folder Include="SpecflowTests\ServiceWebsite\" />
-    <Folder Include="SpecflowTests\Common\" />
-    <Folder Include="SpecflowTests\" />
-    <Folder Include="SpecflowTests\VideoWebsite\" />
-    <Folder Include="bin\Debug\netcoreapp2.2\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TechTalk.SpecRun.Common.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.chrome.desktop.runsettings.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.edge.desktop.runsettings.xml">
+    <Compile Remove="Features\SignIn.feature.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AcceptanceTests.Configuration\AcceptanceTests.Configuration.csproj" />
+    <ProjectReference Include="..\AcceptanceTests.Driver\AcceptanceTests.Driver.csproj" />
+    <ProjectReference Include="..\AcceptanceTests.Model\AcceptanceTests.Model.csproj" />
+    <ProjectReference Include="..\AcceptanceTests.PageObject\AcceptanceTests.PageObject.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.useraccounts.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.firefox.desktop.runsettings.xml">
@@ -59,22 +86,31 @@
     <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.safari.desktop.runsettings.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.useraccounts.json">
+    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.edge.desktop.runsettings.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.appsettings.json">
+    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.edge.desktop.runsettings.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.firefox.desktop.runsettings.xml">
+    <Content Include="SpecflowTests\AdminWebsite\Resources\adminwebsite.chrome.desktop.runsettings.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.safari.desktop.runsettings.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.firefox.desktop.runsettings.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.chrome.desktop.runsettings.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.edge.desktop.runsettings.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.useraccounts.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SpecflowTests\ServiceWebsite\Resources\servicewebsite.appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SpecflowTests\VideoWebsite\Resources\videowebsite.appsettings.json">
@@ -83,30 +119,5 @@
     <Content Include="SpecflowTests\VideoWebsite\Resources\videowebsite.useraccounts.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <SpecFlowFeatureFiles Update="Features\ServiceWebsite\SignIn.feature">
-      <Visible>True</Visible>
-      <Generator></Generator>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="SpecflowTests\AdminWebsite\Features\SignIn.feature">
-      <Visible>False</Visible>
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>SignIn.feature.cs</LastGenOutput>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="SpecflowTests\ServiceWebsite\Features\SignIn.feature">
-      <Visible>False</Visible>
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>SignIn.feature.cs</LastGenOutput>
-    </SpecFlowFeatureFiles>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AcceptanceTests.Configuration\AcceptanceTests.Configuration.csproj" />
-    <ProjectReference Include="..\AcceptanceTests.Driver\AcceptanceTests.Driver.csproj" />
-    <ProjectReference Include="..\AcceptanceTests.Model\AcceptanceTests.Model.csproj" />
-    <ProjectReference Include="..\AcceptanceTests.PageObject\AcceptanceTests.PageObject.csproj" />
   </ItemGroup>
 </Project>
