--- a/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
+++ b/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <PublishChromeDriver>true</PublishChromeDriver>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>VH.AcceptanceTests.Tests</PackageId>
+    <Authors>Video Hearings</Authors>
+    <Description>Test base package with common hooks, steps and configuration loading for specflow tests.</Description>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="adminweb.firefox.desktop.runsettings.xml" />
@@ -29,6 +33,7 @@
     <None Remove="SpecflowTests\ServiceWebsite\Resources\servicewebsite.appsettings.json" />
     <None Remove="SpecflowTests\VideoWebsite\Resources\videowebsite.appsettings.json" />
     <None Remove="SpecflowTests\VideoWebsite\Resources\videowebsite.useraccounts.json" />
+    <None Remove="TechTalk.SpecRun.Common.dll" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Features\AdminWebsite\SigningIn.feature">
@@ -52,6 +57,9 @@
     <None Update="resources\videowebsite\videowebsite.appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TechTalk.SpecRun.Common.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
@@ -63,9 +71,14 @@
     <PackageReference Include="Coypu" Version="3.1.1" />
     <PackageReference Include="Coypu.NUnit" Version="3.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IntegrationTests\" />
+    <Folder Include="SpecflowTests\AdminWebsite\Navigation\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Features\SignIn.feature.cs" />
@@ -117,6 +130,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SpecflowTests\VideoWebsite\Resources\videowebsite.useraccounts.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TechTalk.SpecRun.Common.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
