split driver extension into input and button classes.

--- a/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
+++ b/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
@@ -40,6 +40,7 @@
     <Folder Include="Drivers\" />
     <Folder Include="Settings\" />
     <Folder Include="Capabilities\" />
+    <Folder Include="DriverExtensions\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="resources\adminwebsite\adminwebsite.chrome.desktop.runsettings.xml" />
