Added dropdown and button extensions and classes.

--- a/AcceptanceTests/AcceptanceTests.PageObject/AcceptanceTests.PageObject.csproj
+++ b/AcceptanceTests/AcceptanceTests.PageObject/AcceptanceTests.PageObject.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Components\" />
+    <Folder Include="Components\DropdownLists\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
