created user journeys all the way to add participant page. Moved forms into a Forms folder in the model.

--- a/AcceptanceTests/AcceptanceTests.PageObject/AcceptanceTests.PageObject.csproj
+++ b/AcceptanceTests/AcceptanceTests.PageObject/AcceptanceTests.PageObject.csproj
@@ -19,6 +19,8 @@
   <ItemGroup>
     <Folder Include="Components\" />
     <Folder Include="Components\DropdownLists\" />
+    <Folder Include="Components\Forms\" />
+    <Folder Include="Components\Inputs\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
