--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,13 @@ steps:
     modifyOutputPath: false
     publishWebProjects: false
     projects: '**/*.csproj'
-    arguments: '-o $(Build.ArtifactStagingDirectory)\ '  
+    arguments: '-o $(Build.ArtifactStagingDirectory)\ '
+    
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet build'
+  inputs:
+    projects: '**/*.csproj'
+    arguments: '-o $(Build.ArtifactStagingDirectory)\ '   
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet push'
