--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
 - task: UseDotNet@2
   displayName: 'Install latest dotnet'
   inputs:
-    version: 3.x
+    version: 3.1.102
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet restore'
