Disable auto version generation from project

--- a/AcceptanceTests/AcceptanceTests.Common/AcceptanceTests.Common.csproj
+++ b/AcceptanceTests/AcceptanceTests.Common/AcceptanceTests.Common.csproj
@@ -11,6 +11,12 @@
     <Title>VH Acceptance Tests Common</Title>
     <Description>Common package for acceptance tests components.</Description>
   </PropertyGroup>
+   
+  <PropertyGroup>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
+    <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Appium.WebDriver" Version="4.1.1" />
