Formatting and tidy

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,13 @@ pool:
   vmImage: ubuntu-16.04
 
 container: dotnetsdk
+
 steps:
 - task: gittools.gitversion.gitversion-task.GitVersion@5
   displayName: GitVersion
 
 - task: DotNetCoreCLI@2
-  displayName: 'dotnet restore'
+  displayName: Restore Dependencies
   inputs:
     command: restore
     projects: '**/AcceptanceTests.Common/*.csproj'
@@ -28,7 +29,7 @@ steps:
     verbosityRestore: Minimal
 
 - task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
+  displayName: Create NuGet Packkage
   inputs:
     command: publish
     zipAfterPublish: false
@@ -40,8 +41,8 @@ steps:
     versioningScheme: byBuildNumber
 
 - task: DotNetCoreCLI@2
-  displayName: 'dotnet push'
-  condition: and(always(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  displayName: Push Package to VH NuGet Repo
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   inputs:
     command: push
     publishVstsFeed: '3f69a23d-fbc7-4541-afc7-4cccefcad773/e48b2732-376c-4052-ba97-b28783c9bab5'
