explicit gitversion.yml config

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,8 @@ container: dotnetsdk
 steps:
 - task: gittools.gitversion.gitversion-task.GitVersion@5
   displayName: GitVersion
+  inputs:
+    configFilePath: GitVersion.yml
 
 - task: DotNetCoreCLI@2
   displayName: Restore Dependencies
