--- a/AcceptanceTests/AcceptanceTests.Common/AcceptanceTests.Common.csproj
+++ b/AcceptanceTests/AcceptanceTests.Common/AcceptanceTests.Common.csproj
@@ -32,7 +32,7 @@
     </PackageReference>
     <PackageReference Include="OWASPZAPDotNetAPI" Version="2.8.0" />
     <PackageReference Include="Polly" Version="7.2.0" />
-    <PackageReference Include="Protractor.Net.Standard.Latest.Selenium" Version="0.12.1" />
+    <PackageReference Include="Protractor" Version="0.13.0" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
