--- a/AcceptanceTests/AcceptanceTests.TestAPI.IntegrationTests/AcceptanceTests.TestAPI.IntegrationTests.csproj
+++ b/AcceptanceTests/AcceptanceTests.TestAPI.IntegrationTests/AcceptanceTests.TestAPI.IntegrationTests.csproj
@@ -6,16 +6,36 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Hooks\" />
-    <Folder Include="Features\" />
-    <Folder Include="Steps\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.6" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SpecFlow" Version="3.3.57" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.3.57" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.3.57" />
+    <PackageReference Include="VH.AcceptanceTests.Common" Version="1.0.252" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AcceptanceTests.TestAPI.Common\AcceptanceTests.TestAPI.Common.csproj" />
+    <ProjectReference Include="..\AcceptanceTests.TestAPI.DAL\AcceptanceTests.TestAPI.DAL.csproj" />
+    <ProjectReference Include="..\AcceptanceTests.TestAPI\AcceptanceTests.TestAPI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Features\Healthcheck.feature.cs">
+      <DependentUpon>HealthCheck.feature</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
